[workspace]
members = ["oboron-cli-conformance"]
resolver = "2"

# Release / bench profiles at the workspace level so they actually
# apply (Cargo silently ignores per-package profiles on non-root
# members).
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"
license = "MIT"
repository = "https://gitlab.com/oboron/oboron-tools-rs"
homepage = "https://oboron.org/"
documentation = "https://oboron.org/"
authors = ["Bojan Đuričković"]

[workspace.dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
