[workspace]
members = ["oboron-cli-core", "obcrypt-cli", "oboron-cli-conformance"]
resolver = "2"

# Release / bench profiles at the workspace level so they actually
# apply (Cargo silently ignores per-package profiles on non-root
# members). LTO is important because obcrypt-cli depends on the
# obcrypt library crate — without cross-crate inlining of the AEAD
# hot path, the binary leaves real performance on the table.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77.0"
license = "MIT"
repository = "https://gitlab.com/oboron/oboron-tools-rs"
homepage = "https://oboron.org/"
documentation = "https://oboron.org/"
authors = ["Bojan Đuričković"]

[workspace.dependencies]
obcrypt = { version = "0.2.0", default-features = false }
oboron-cli-core = "0.1.0"

anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
data-encoding = "2.6"
dirs = "5.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
