[package]
name = "oboron-cli-conformance"
# 0.2.0: renamed the `obc` API surface to `obcrypt` (field
# `Config::obc` → `Config::obcrypt`, function `run_obc_vectors`
# → `run_obcrypt_vectors`, builder `with_obc` → `with_obcrypt`,
# CLI flag `--obc` → `--obcrypt`, suite name `obc-vectors` →
# `obcrypt-vectors`) to match the renamed obcrypt-cli binary.
# Does not track the workspace version.
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
description = "Conformance test suite for the oboron protocol CLI surface. Ships canonical test vectors and the `oboron-cli-conformance` binary for validating alternative-language implementations."
keywords = ["cli", "conformance", "encryption", "oboron", "testing"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"

[[bin]]
name = "oboron-cli-conformance"
path = "src/bin/oboron-cli-conformance.rs"

[features]
default = ["aags", "aasv", "apgs", "apsv", "upbc", "ztier"]
aags = []
aasv = []
apgs = []
apsv = []
upbc = []
ztier = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
